--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,23 @@ formkeep: 729ae68487eb
 baseurl: ""
 google_analytics: "UA-82067299-1"
 search_console: "SYhVUg7tGuXQHt1Xc72jk4g5YtUCfC24c5rj6eiMNUo"
-
 url: "https://redetelenew.com"
 
 # User settings
-username: Lorem Ipsum
+razao_social: "Renato da S. Machado Inf. - ME - CNPJ 15.065.705/0001-64"
+
 header_title: Olá, somos a Rede Telenew.
 header_description: A internet que você precisa!
+
 slice_destaques_title: Lorem
 slice_destaques_description: Lorem ipsum dolor sit amet, consectetur adipisicing!
+
 slice_depoimentos_title: Depoimentos
 slice_depoimentos_description: Veja o que os nossos clientes tem a dizer.
-slice_newsletter_title: Quando vai ficar pronto?
-slice_newsletter_description: Digite aqui seu e-email e fique por dentro da data do lançamento.
+
+slice_newsletter_title: Lançamentos e promoções
+slice_newsletter_description: Receba em seu e-mail todos nossos lançamentos e promoções.
+
 telefone: (XX) XXXXX-XXXX
 whatsapp: (XX) XXXXX-XXXX
 email: contato@redetelenew.com
@@ -39,15 +43,9 @@ compress_html:
 # Links to include in menu navigation
 # For external links add external: true
 links:
-  - top_title: Home
-    top_url: "/"
   - top_title: Planos
-    top_url: "#!"
-    nested:
-      - sub_title: Plano 1
-        sub_url: "#!/"
-      - sub_title: Plano 2
-        sub_url: "#!/"
+    top_url: "/produtos.html"
+    intro: "Nossos modelos profissionais exclusivos."
   - top_title: Artigos
     top_url: "#!/"
   - top_title: Tecnologia
