--- a/_config.yml
+++ b/_config.yml
@@ -49,12 +49,14 @@ links:
       - sub_title: Planos
         sub_url: "/produtos.html"
         sub_intro: "Nossos modelos profissionais exclusivos."
-  - top_title: Artigos
-    top_url: "#!/"
   - top_title: Tecnologia
     top_url: "#!/"
   - top_title: Sobre Nós
-    top_url: "#!/"
+    top_url: "/sobre.html"
+    top_intro: "Um pouco sobre nossa empresa."
+  - top_title: Blog
+    top_url: "/blog.html"
+    top_intro: "É disso que estamos falando."
   - top_title: Contato
     top_url: "/contato.html"
     top_intro: "Use o formulário abaixo para enviar sua mensagem."
