--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ search_console: "SYhVUg7tGuXQHt1Xc72jk4g5YtUCfC24c5rj6eiMNUo"
 url: "https://redetelenew.com"
 
 # User settings
-razao_social: "Renato da S. Machado Inf. - ME - CNPJ 15.065.705/0001-64"
+razao_social: "Rede Telenew Eireli ME - CNPJ 15.065.705/0001-64"
 
 header_title: Olá, somos a Rede Telenew.
 header_description: A internet que você precisa!
