--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp-concat-css": "^2.3.0",
     "gulp-git": "^1.12.0",
     "gulp-google-webfonts": "0.0.12",
-    "gulp-image": "^2.7.3",
+    "gulp-imagemin": "^3.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.1.1",
