--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Rede Telenew"
-description: "Lorem ipsum dolor sit amet"
+description: "Internet via rádio e via fibra Mauá"
 madmimi: 238575
 formkeep: 729ae68487eb
 baseurl: ""
