--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ slice_newsletter_description: Receba antes em seu e-mail nossos lançamentos e p
 telefone: (XX) XXXXX-XXXX
 whatsapp: (XX) XXXXX-XXXX
 email: contato@redetelenew.com
-endereco: Rua Lorem Ipsum, XXX - XX - CEP XXXXX-XXX
+endereco: Rua Lorem Ipsum, XX - XX - CEP XXXXX-XXX
 face_username:  RedeTelenew
 
 # Build settings
