--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ madmimi: 238575
 formkeep: 729ae68487eb
 baseurl: ""
 google_analytics: "UA-82067299-1"
-search_console: "SYhVUg7tGuXQHt1Xc72jk4g5YtUCfC24c5rj6eiMNUo"
+search_console: qgL2jXXnhOtZdKz-vpydWBNsSaEouK2pWz7J9eYAmos
 url: "https://redetelenew.com"
 
 # User settings
@@ -29,7 +29,7 @@ slice_newsletter_description: Receba antes em seu e-mail nossos lançamentos e p
 telefone: (XX) XXXXX-XXXX
 whatsapp: (XX) XXXXX-XXXX
 email: contato@redetelenew.com
-endereco: Rua Lorem Ipsum, XX - XX - CEP XXXXX-XXX
+endereco: Rua Lorem Ipsum, XXX - XX - CEP XXXXX-XXX
 face_username:  RedeTelenew
 
 # Build settings
