--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-sync": "^2.13.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
     "gulp-git": "^1.12.0",
@@ -22,10 +23,9 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.1.1",
-    "gulp-replace": "^0.5.4",
+    "gulp-shell": "^0.6.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.2.0",
-    "gulp-version-append": "^0.2.0",
     "lost": "^7.0.3",
     "rsyncwrapper": "^1.0.1",
     "run-sequence": "^1.1.5",
