--- a/_config.yml
+++ b/_config.yml
@@ -43,20 +43,15 @@ compress_html:
 # For external links add external: true
 links:
   - top_title: Internet
-    top_url: "#!/"
-    nested:
-      - sub_title: Planos
-        sub_url: "/planos.html"
-        sub_intro: "Planos para sua vida"
-      - sub_title: Contrato
-        sub_url: "/contrato.html"
-        sub_intro: "Contrato"
+    top_url: "/internet.html"
   - top_title: Área
     top_url: "/area.html"
     top_intro: "Nossa área de cobertura."
   - top_title: Sobre Nós
     top_url: "/sobre.html"
     top_intro: "Um pouco sobre nossa empresa."
+  - top_title: Webmail
+    top_url: "#"
   - top_title: Contato
     top_url: "/contato.html"
     top_intro: "Use o formulário abaixo para enviar sua mensagem."
