--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ razao_social: "A. E. V. Wireless - CNPJ 15.065.705/0001-64"
 header_title: Bem-vindo à Otimatech!
 header_description: Planos para sua família usar à vontade
 
-slice_price-table_title: Planos
-slice_price-table_description: Planos para sua vida
+slice_price-table_title: Planos Residenciais
+slice_price-table_description: Nossas soluções em internet via rádio para você
 
 slice_depoimentos_title: Depoimentos
 slice_depoimentos_description: Confira abaixo alguns depoimentos
