--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ header_title: Bem-vindo à Otimatech!
 header_description: Planos para sua família usar à vontade
 
 slice_price-table_title: Planos Residenciais
-slice_price-table_description: Nossas soluções em internet via rádio para você
+slice_price-table_description: Nossas soluções em internet via fibra para você
 
 slice_depoimentos_title: Depoimentos
 slice_depoimentos_description: Confira abaixo alguns depoimentos
