--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ search_console: ""
 url: http://localhost:3000
 
 # User settings
-razao_social: "A. E. V. Wireless - CNPJ 15.065.705/0001-64"
+razao_social: "Otimatech"
 
 header_title: Bem-vindo à Otimatech!
 header_description: Planos para sua família usar à vontade
